added eductaion and experience

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>Javascript developer with experience of working on frontend and backend. I am enthusiastic about new technologies . Always trying to build cool stuff.</p>
+                <p>I am a Javascript developer enthusiastic about new technologies . Always trying to build cool stuff. Like to read books in free time</p>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -92,30 +92,34 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">Sept 2017 - Present</p>
+                            <h3>Thinksys Software</h3>
+                            <h4>Javascript Developer</h4>
+                            <p><strong>Smilebox</strong>
+                                <br>Maintained Video Rendering Servers as a Nodejs Developer. 
+                                <br>Build new features and fixed bugs working on the frontend on technologies - C#, Jquery, Vue.js
+                                <br>Interacted with client, used project mangement tools (JIRA)
+                            </p>
+
+                            <p><strong>Fraud detection system</strong>
+                                <br>Made the UI from scratch using Angular.js 
+                                <br>Worked on node js writing server side code.
+                            </p>
+
+
+                            <p><strong>Content Critical</strong>
+                                <br>Worked as frontend developer using Angular.js 
+                                <br>attended client meetings. Made requirement documentation
+                            </p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <p class="timeline-event-thumbnail">June 2017 - Sept 2017</p>
+                            <h3>Thinksys Software</h3>
+                            <h4>Internship</h4>
+                            <p>Worked as an intern on the javscript stack.</p>
                         </div>
                     </li>
                 </ul>
@@ -137,30 +141,26 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <h3>B. Tech.</h3>
+                            <h4>APJ Adul Kalam Technical University (76%)</h4>
+                            <p><strong>Future Institute of Engineering & Techonology, Bareilly, (U.P.)</strong>
+                            </p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                            <h3>Intermediate</h3>
+                            <h4>Central Board of Secondary Education (CBSE Board) (84%)</h4>
+                            <p><strong>Takshashila Public School, Shahjahanpur, (U.P.)</strong></p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <h3>High School</h3>
+                            <h4>Central Board of Secondary Education (CBSE Board) (87%)</h4>
+                            <p><strong>Takshashila Public School, Shahjahanpur, (U.P.)</strong></p>
                         </div>
                     </li>
                 </ul>
@@ -183,11 +183,9 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
+                            <p class="timeline-event-thumbnail">GIT</p>
+                            <p class="timeline-event-thumbnail">Node</p>
                             <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
