--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
                             <p>Worked as an intern on the javscript stack.</p>
                         </div>
                     </li>
+
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">Nov 2018 - Jan 2019</p>
+                            <h3>Freelancer</h3>
+                            <h4>Nodejs Developer</h4>
+                            <p>Collaborated with client in requirement gathering. Developed API using Nodejs, Express.js</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -183,28 +193,43 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">Node.js, Rest API, Express</p>
+                        </div>
+                    </li>
+
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">GIT</p>
-                            <p class="timeline-event-thumbnail">Node</p>
-                            <h3>Geil,Danke! GmbH</h3>
                         </div>
                     </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
+
+                    <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                            <p class="timeline-event-thumbnail">Javascript</p>
                         </div>
                     </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+
+                    <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <p class="timeline-event-thumbnail">Angular.js</p>
+                        </div>
+                    </li>
+
+
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">Familiarity with Bash, Linux</p>
+                        </div>
+                    </li>
+
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">Familiarity with AWS (S3, SQS, SNS, DynamoDB, EC2)</p>
                         </div>
                     </li>
                 </ul>
@@ -224,17 +249,12 @@
             <div class="col-md-12 " data-aos="fade-up">
 
                 <h3>Phone Number</h3>
-                <p>+20 5555 569 42</p>
-                <h3> Mobile Numberr</h3>
-                <p>+20 5555 569 42</p>
+                <p>7705928991</p>
                 <h3>Email</h3>
-                <p>mail@info.me </p>
-
-                <h3>Social Network</h3>
+                <p>pawas.saxena@gmail.com </p>
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="https://in.linkedin.com/in/pawas-saxena"><i class="ion-social-linkedin"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
