--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resume</title>
+    <title>Pawas Saxena</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -255,7 +255,9 @@
 
                 <ul class="social">
                     <li><a href="https://in.linkedin.com/in/pawas-saxena"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="resume.pdf"><i class="ion-document"></i></a>Resume</li>
                 </ul>
+                <br>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
             </div>
